--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -5,11 +5,36 @@
     android:layout_height="match_parent"
     android:layout_margin="16dp"
     >
+    <ImageView
+        android:id="@+id/crime_photo"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:scaleType="centerInside"
+        android:cropToPadding="true"
+        android:background="@android:color/darker_gray"
+        android:contentDescription="@string/crime_photo_no_image_description"
+        android:focusable="true"
+        />
+    <ImageButton
+        android:id="@+id/crime_camera"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@android:drawable/ic_menu_camera"
+        android:contentDescription="@string/crime_photo_button_description"
+        />
+
+<LinearLayout
+    android:orientation="vertical"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    >
     <TextView
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/crime_title_label"
+        android:labelFor="@id/crime_title"
         />
     <EditText
         android:id="@+id/crime_title"
@@ -17,6 +42,9 @@
         android:layout_height="match_parent"
         android:hint="@string/crime_title_hint"
         />
+
+</LinearLayout>
+
     <TextView
 
         android:layout_width="match_parent"
@@ -33,6 +61,17 @@
         android:layout_height="match_parent"
         android:text="@string/crime_solved_label"
         />
-
+    <Button
+        android:id="@+id/crime_suspect"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/crime_suspect_text"
+        />
+    <Button
+        android:id="@+id/crime_report"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/crime_report_text"
+        />
 
 </LinearLayout>
